upgrade java version to 21